[package]
name = "linfa-forest"
version = "0.5.0"
edition = "2021"
authors = ["Jakub Firlej <jakubfirlej64@gmail.com>", "Piotr Hondra <piotrhondra@gmail.com>"]
description = "An implementation of random forest classification algorithm"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "forest", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
ndarray = { version = "0.15" , features = ["rayon", "approx"]}
ndarray-rand = "0.14"

linfa = { version = "0.5.0", path = "../.." }
linfa-trees = { version = "0.5.0", path = "../linfa-trees"}

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
criterion = "0.3.5"
approx = "0.4"

linfa-datasets = { version = "0.5.0", path = "../../datasets/", features = ["iris"] }

[[bench]]
name = "random_forest"
harness = false
